--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,37 @@
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, class: 'form-control' %>
       </div>
+      <!--  -->
+      <div class="form-group">
+        <div class="col-md-6 no-padding">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+
+        <div class="col-md-6 no-padding left-padding">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
+      </div>
+      <!--  -->
+      <div class="form-group">
+        <div class="col-md-4 no-padding">
+          <%= f.label :age %>
+          <%= f.number_field :age, class: "form-control" %>
+        </div>
+
+        <div class="col-md-4 no-padding">
+          <%= f.label :cnic %>
+          <%= f.number_field :cnic, class: "form-control" %>
+        </div>
+
+        <div class="col-md-4 no-padding left-padding">
+          <%= f.label :gender %>
+          <%= f.text_field :gender, class: "form-control" %>
+        </div>
+
+      </div>
+      <!--  -->
       <div class="form-group">
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
