property MVC added

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,11 +8,11 @@
 
 .username {
   font-style: normal;
-  font-size: 15px;
+  // font-size: 15px;
   font-weight: bold;
-  padding-top: 0.4cm;
-  // // font-style: italic;
+  // padding-top: 0.2cm;
+  font-style: italic;
   // text-decoration: underline;
-  color: white;
+  // color: white;
 
 }
