--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Page 1</a></li> -->
-        <li><%= link_to "my properties"%></li>
+        <li><%= link_to "my properties", properties_path %></li>
         <li><%= link_to "my profile", edit_user_registration_path(current_user)%></li>
       </ul>
       <form class="navbar-form navbar-left">
@@ -21,7 +21,10 @@
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li> <div class="username"> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %></div> </li>
+        <li>  <%= link_to edit_user_registration_path(current_user) do%>
+                <div class="username"> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %></div>
+              <% end %>
+        </li>
         <li><%= link_to "Logout", destroy_user_session_path, :class => "glyphicon glyphicon-log-out", method: :delete %></li>
       </ul>
     <% else %>
