--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,18 +8,8 @@
         <!-- <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Page 1</a></li> -->
         <li><%= link_to "my properties", properties_path %></li>
-        <li><%= link_to "my profile", edit_user_registration_path(current_user)%></li>
+        <li><%= link_to "properties on Map", page_allpropertiesonmap_path %></li>
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search">
-          <div class="input-group-btn">
-            <button class="btn btn-default" type="submit">
-              <i class="glyphicon glyphicon-search"></i>
-            </button>
-          </div>
-        </div>
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <li>  <%= link_to edit_user_registration_path(current_user) do%>
                 <div class="username"> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %></div>
