--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="col-lg-3">
+<!-- <div class="col-lg-3">
   <div class="well sidebar-nav">
     <h3>Sidebar</h3>
     <ul class="nav nav-list">
@@ -7,5 +7,5 @@
       <li><%= link_to "Link2", "/path2"  %></li>
       <li><%= link_to "Link3", "/path3"  %></li>
     </ul>
-  </div><!--/.well -->
-</div><!--/span-->
+  </div>
+</div> -->
