admin functionality added

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,37 @@
-<h1>Page#about</h1>
-<p>Find me in app/views/page/about.html.erb</p>
+<h1>about</h1>
+
+<h2>admin login</h2>
+<ul class="list-unstyled">
+  <li>email
+      <ul>
+          <li>admin@gmail.com</li>
+      </ul>
+  </li>
+  <li>password
+      <ul>
+          <li>admin</li>
+      </ul>
+  </li>
+  <li>language
+      <ul>
+          <li>ruby on rails</li>
+      </ul>
+  </li>
+  <li>database
+      <ul>
+          <li>sqlite</li>
+      </ul>
+  </li>
+  <li>google map some times take time to load if it does not shows up just refresh the page</li>
+</ul>
+<hr>
+<h2>application requirements</h2>
+<ol class="list-unstyled list-group">
+    <li>Login process/ authentication for administrators and customers (Sign up and Sign in/ Sign out) to avoid unauthorized access.</li>
+    <li>Administrators can add, remove and approve property ads along with details.</li>
+    <li>Property owner can add property ads, remove and manage property added by them only.</li>
+    <li>Buyers can search for property according to its type/price/city/category.</li>
+    <li>Buyers can contact the property owners after sign in (authentication) only.</li>
+    <li>Location of each property is required using Google map.</li>
+    <li>List of nearby important places (schools, parks, hospitals) should be available with the property (based on the area).</li>
+</ol>
