--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,6 +1,4 @@
-<h1>Page#home</h1>
-<p>Find me in app/views/page/home.html.erb</p>
-
+<h1>all properties</h1>
 
 <div class="card">
   <div class="card-body">
