--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -36,7 +36,7 @@
   <% end %>
 </dl>
 
-<% if current_user.id == @property.user_id %>
+<% if (current_user.id == @property.user_id || current_user.admin? ) %>
   <%= link_to t('.back', :default => t("helpers.links.back")),
                 properties_path, :class => 'btn btn-default'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
