--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,6 +12,7 @@
         <% if current_user && current_user.admin? %>
           <li><%= link_to "all users", users_index_path %></li>
         <% end %>
+      <li><%= link_to "about", page_about_path %></li>        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>  <%= link_to edit_user_registration_path(current_user) do%>
